# src/modules/email/email.routes.ts
@@ -4,4 +4,3 @@ import { emailController } from "./email.controller";
 export const emailRoutes = new Hono();
 
 emailRoutes.post("/send", emailController.sendEmail);
-emailRoutes.post("/send-template", emailController.sendTemplateShortcut);
